# backend_gdtd

./: .gitignore  alembic.ini  frontend_step.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06c01bac3323_add_patient_profile.py  073d4bac2f9a_add_patient_profile.py  14cddc151e99_add_patient_profile.py  18327d56b891_add_spentnafscore_table.py  21ed449dd0ea_add_volume_to_foodlog.py  37792cb99200_add_bloodtest.py  3c129d0af2c0_add_volume_to_fooddatabase.py  3d9c35e6a188_add_fooddatabase.py  438e4f6a839c_add_cascade_delete_in_labfield.py  4cbe3f36f71c_add_exercise_database.py  61ac0ba6157a_add_nutrition_targets.py  77246656a465_add_realname_surname.py  902bffb8b85a_add_patient_profile.py  9a2b1c3d4e5f_remove_realname_and_surname_from_user.py  9b4081a816f2_create_user_table.py  9bf2b5d65c96_add_realname_surname.py  ab0603ed8136_add_foodlog_and_dailycaloriegoal.py  acee328cfbe5_.py  b47aae31be7f_change_back_to_nullable_true.py  e2ee4eaa7525_.py  (+9 more)
api/: admin_api.py  blood_test_api.py  food_api.py  food_item_api.py  food_log_api.py  patient_api.py  spent_naf_api.py  user_api.py
core/: auth.py  config.py
crud/: blood_test_crud.py  crud_user.py  food_log_crud.py  lab_crud.py  patient_crud.py  spent_naf_crud.py
model/: model.py  models.py
schema/: admin_schema.py  base_schema.py  blood_test_schema.py  config.py  food_log_schema.py  lab_schema.py  nutrition_schema.py  patient_schema.py  spent_naf_schema.py  user_schema.py
services/: naf_calculator.py  nutrition_service.py
test/: reproduce_issue.py  test_nutrition.py  test_responses.py  test_security.py
(+1 files in other folders)
